from abc import ABC, abstractmethod
from datetime import datetime
from queue import Queue
import threading
from typing import Any, Dict, List, Optional, Union
import numpy as np

# Interfaces
class ICamera(ABC):
    @abstractmethod
    def capture(self) -> Optional[np.ndarray]:
        pass

    @abstractmethod
    def start(self) -> None:
        pass

class ICommunication(ABC):
    @abstractmethod
    def connect(self) -> Any:
        pass

    @abstractmethod
    def disconnect(self) -> None:
        pass

    @abstractmethod
    def init(self) -> None:
        pass

    @abstractmethod
    def is_connected(self) -> bool:
        pass

    @abstractmethod
    def send(self, message: str) -> None:
        pass

class IRTC(ABC):
    @abstractmethod
    def get_time(self) -> str:
        pass

class ISystem(ABC):
    @abstractmethod
    def get_hardware_info(self) -> Optional[Dict[str, Any]]:
        pass

    @abstractmethod
    def schedule_wakeup(self, wake_time: Union[str, int, float]) -> None:
        pass

class State(ABC):
    @abstractmethod
    def handle(self, context: 'Context') -> None:
        pass

class App:
    def __init__(self):
        self._context: Context = Context()

    def run(self) -> None:
        pass

    def start(self) -> None:
        pass

class Camera(ICamera):
    def __init__(self):
        self._cam = None
        self._height: int = 0
        self._quality: int = 0
        self._width: int = 0

    def _create_base64_image(self, image_array: Optional[np.ndarray]) -> str:
        pass

    def capture(self) -> Optional[np.ndarray]:
        pass

    def start(self) -> None:
        pass

class Config:
    def __init__(self):
        self._list: List = []
        self._path: str = ""
        self.active: Dict = {}
        self.uuid: str = ""

    def check_for_new_config(self) -> None:
        pass

    def get_default_config(self) -> Dict[str, Any]:
        pass

    def load(self) -> None:
        pass

    def validate_config(self, new_config) -> None:
        pass

    def validate_period(self, period) -> None:
        pass

    def validate_time_format(self, new_config) -> None:
        pass

class ConfigCheckState(State):
    def handle(self, context: 'Context') -> None:
        pass

    def handle_new_config(self) -> None:
        pass

    def send_uuid(self) -> None:
        pass

    def wait_for_response(self) -> None:
        pass

class Context:
    def __init__(self):
        self._state: State = None

    def request(self) -> None:
        self._state.handle(self)

    def set_state(self, state: State) -> None:
        self._state = state

class CreateMessageState(State):
    def get_timestamp(self) -> None:
        pass

    def handle(self, context: 'Context') -> None:
        pass

    def prepare_json(self) -> None:
        pass

    def take_picture(self) -> None:
        pass

class InitState(State):
    def handle(self, context: 'Context') -> None:
        pass

    def start_camera(self) -> None:
        pass

class Logger:
    def __init__(self):
        self._filepath: str = ""
        self._log_queue: Queue[str] = Queue()
        self._mqtt: Any = None
        self._pool = None
        self._start_event: threading.Event = threading.Event()

    def _create_communication_handler(self) -> None:
        pass

    def _publish_loop(self, msg: str, topic: str) -> None:
        pass

    def disconnect_remote_logging(self) -> None:
        pass

    def emit(self, record) -> None:
        pass

    def start_logging(self) -> None:
        pass

    def start_remote_logging(self) -> None:
        pass

class MessageCreator:
    def __init__(self, system: ISystem, rtc: IRTC, camera: ICamera):
        self._camera = camera
        self._rtc = rtc
        self._system = system

    def create_message(self) -> str:
        pass

    def log_hardware_info(self) -> None:
        pass

class MQTT(ICommunication):
    def __init__(self):
        self._broker: str = ""
        self._port: int = 0
        self._qos: int = 0
        self._subtopic: str = ""
        self.broker_connect_counter: int = 0
        self.client = None
        self.config_confirm_message: str = ""
        self.config_received_event: threading.Event = threading.Event()

    def _broker_check(self) -> None:
        pass

    def _is_broker_available(self) -> bool:
        pass

    def _publish(self, message: str, topic: str) -> None:
        pass

    def connect(self) -> Any:
        pass

    def disconnect(self) -> None:
        pass

    def init_receive(self) -> None:
        pass

    def is_connected(self) -> bool:
        pass

    def reset_config_received_event(self) -> None:
        pass

    def send(self, message: str) -> None:
        pass

class RTC(IRTC):
    def _convert_timestamp(self, timestamp) -> str:
        pass

    def _find_line(self, lines: str, target_string) -> str:
        pass

    def _get_timedatectl(self) -> List[str]:
        pass

    def _sync_RTC_to_system(self) -> None:
        pass

    def _sync_system_to_ntp(self, max_retries: int, delay: int) -> bool:
        pass

    def get_time(self) -> str:
        pass

class Schedule:
    def __init__(self):
        self._time_offset: int = 0

    def adjust_time(self, timestamp: str) -> str:
        pass

    def calculate_shutdown_duration(self, waiting_time: float) -> float:
        pass

    def get_wake_time(self, shutdown_duration: float) -> datetime:
        pass

    def should_shutdown(self, waiting_time: float) -> bool:
        pass

    def shutdown(self, waiting_time: float, current_time: datetime) -> None:
        pass

    def working_time_check(self, wake_up_timestamp: str, shut_down_timestamp: str) -> None:
        pass

class ShutDownState(State):
    def handle(self, context: 'Context') -> None:
        pass

    def shutdown_system(self) -> None:
        pass

class System(ISystem):
    def _get_battery_info(self) -> Dict[str, Any]:
        pass

    def _get_cpu_temperature(self) -> float:
        pass

    def get_hardware_info(self) -> Optional[Dict[str, Any]]:
        pass

    def schedule_wakeup(self, wake_time: Union[str, int, float]) -> None:
        pass

class TransmitState(State):
    def handle(self, context: 'Context') -> None:
        pass

    def transmit_message(self) -> None:
        pass